--- a/TechHub.Web/Pages/Shared/_Layout.cshtml
+++ b/TechHub.Web/Pages/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    @await Html.PartialAsync("_Favicons")
     <title>@ViewBag.Title</title>
 </head>
 <body>
