--- a/TechHub.Web/Pages/Shared/_Layout.cshtml
+++ b/TechHub.Web/Pages/Shared/_Layout.cshtml
@@ -1,14 +1,38 @@
 ﻿<!DOCTYPE html>
 
-<html>
+<html dir="rtl" lang="fa">
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     @await Html.PartialAsync("_Favicons")
-    <title>@ViewBag.Title</title>
+    <title>@ViewData["Title"]</title>
+
+    <environment include="Development">
+        <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.rtl.min.css"/>
+    </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.rtl.min.css"
+            asp-fallback-href="~/lib/bootstrap/css/bootstrap.min.css"
+            asp-fallback-test-class="sr-only" asp-fallback-test-property="position"
+            asp-fallback-test-value="absolute"
+            integrity="sha384-WJUUqfoMmnfkBLne5uxXj+na/c7sesSJ32gI7GfCk4zO4GthUKhSEGyvQ839BC51"
+            crossorigin="anonymous">
+    </environment>
 </head>
 <body>
     <div>
         @RenderBody()
     </div>
+    <environment include="Development">
+        <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            asp-fallback-src="~/lib/bootstrap/js/bootstrap.bundle.min.js"
+            asp-fallback-test="window.bootstrap"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
+    </environment>
 </body>
 </html>
