--- a/TechHub.Web/Pages/Shared/_Layout.cshtml
+++ b/TechHub.Web/Pages/Shared/_Layout.cshtml
@@ -24,17 +24,17 @@
 <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./">تک‌هاب</a>
+            <a class="navbar-brand" href="./">TechHub</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./">خانه</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">درباره ما</a>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="جستجو" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">جستجو</button>
+                        </form>
                     </li>
                 </ul>
                 <div class="dropdown d-flex me-4 mb-2 mb-lg-0">
@@ -68,10 +68,6 @@
                 <div class="d-flex me-4 mb-2 mb-lg-0">
                     <a class="btn btn-outline-secondary" href="#">ورود/ثبت‌نام</a>
                 </div>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="جستجو" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">جستجو</button>
-                </form>
             </div>
         </div>
     </nav>
