Add _Pagination partial view

--- a/TechHub.Web/Pages/_ViewImports.cshtml
+++ b/TechHub.Web/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TechHub.Web
 @using TechHub.Core.DTOs
+@using TechHub.Web.Models
 @namespace TechHub.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
