--- a/TechHub.Web/Pages/Index.cshtml
+++ b/TechHub.Web/Pages/Index.cshtml
@@ -39,14 +39,6 @@
 
 <div class="row justify-content-center my-2">
     <div class="col-auto">
-        <ul class="pagination">
-            <li class="page-item @(Model.PostSummaryDtos.MetaData.HasPrevious ? "" : "disabled")">
-                <a asp-page="Index" asp-route-currentPage="@(Model.CurrentPage - 1)" class="page-link">قبلی</a>
-            </li>
-
-            <li class="page-item @(Model.PostSummaryDtos.MetaData.HasNext ? "" : "disabled")">
-                <a asp-page="Index" asp-route-currentPage="@(Model.CurrentPage + 1)" class="page-link">بعدی</a>
-            </li>
-        </ul>
+        <partial name="_Pagination" model="@Model.Pagination" />
     </div>
 </div>
