Add Vazirmatn font

--- a/TechHub.Web/Pages/Shared/_Layout.cshtml
+++ b/TechHub.Web/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     @await Html.PartialAsync("_Favicons")
     <title>@ViewData["Title"]</title>
-
+    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.rtl.min.css" />
     </environment>
