--- a/TechHub.Web/wwwroot/css/site.css
+++ b/TechHub.Web/wwwroot/css/site.css
@@ -1,4 +1,8 @@
-﻿article a {
+﻿body {
+    font-family: Vazirmatn, sans-serif;
+}
+
+article a {
     color: inherit;
     text-decoration: none;
 }
