--- a/TechHub.Web/Pages/Index.cshtml
+++ b/TechHub.Web/Pages/Index.cshtml
@@ -18,7 +18,7 @@
     <div class="col-lg-9 h4 pb-2 my-4 border-bottom border-danger border-3 fw-light">
         @if (Model.CurrentPage > 1)
         {
-            <span>آخرین پست ها | صفحه @Model.CurrentPage</span>
+            <span>آخرین پست ها | صفحه @Model.CurrentPage.ToPersianNumbers()</span>
         }
         else
         {
