--- a/TechHub.Web/Pages/_ViewImports.cshtml
+++ b/TechHub.Web/Pages/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using TechHub.Web
 @using TechHub.Core.DTOs
 @using TechHub.Web.Models
+@using DNTPersianUtils.Core
 @namespace TechHub.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
