Update login link in _Layout

--- a/TechHub.Web/Pages/Shared/_Layout.cshtml
+++ b/TechHub.Web/Pages/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                     </ul>
                 </div>
                 <div class="d-flex me-4 mb-2 mb-lg-0">
-                    <a class="btn btn-outline-secondary" href="#">ورود/ثبت‌نام</a>
+                    <a class="btn btn-outline-secondary" asp-page="Account/Login">ورود/ثبت‌نام</a>
                 </div>
             </div>
         </div>
